Fixed spacing

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,6 +6,7 @@ body {
 }
 
 h1 {
+  padding: 50px 30px 50px 80px;
   animation-name: grow-shrink, expand;
   animation-duration: 8s, 5s, 5s;
   animation-iteration-count: infinite;
